--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>web2-8</title>
-  </head>
-  <body>
-    <nav>
-      <form id="form">
-        <select name="select">
-          <option value="index.html">メインページ</option>
-          <option value="other.html">別のページ</option>
-        </select>
-      </form>
-    </nav>
-    <section>
-	<p id="countdown"></p>
-	<p id="cookie"></p>
-	<form action="#" id="remove_cookie">
-		<input type="submit" value="Cookieの削除">
-	</form>
-    </section>
-    <script type="text/javascript" src="js/default.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>web2-8</title>
+		<link rel="stylesheet" href="css/default.css" type="text/css">
+	</head>
+	<body>
+		<section class="image">
+			<div class="center">
+				<div>
+					<img src="img/01.jpg" id="bigimg">
+				</div>
+				<ol>
+					<li><img src="img/th_01.jpg" class="thumb" data-image="01"></li>
+					<li><img src="img/th_02.jpg" class="thumb" data-image="02"></li>
+					<li><img src="img/th_03.jpg" class="thumb" data-image="03"></li>
+				</ol>
+			</div>
+		</section>
+		<nav>
+			<form id="form">
+			<select name="select">
+				<option value="index.html">メインページ</option>
+				<option value="other.html">別のページ</option>
+			</select>
+			</form>
+		</nav>
+		<section>
+			<p id="countdown"></p>
+			<p id="cookie"></p>
+			<form action="#" id="remove_cookie">
+				<input type="submit" value="Cookieの削除">
+			</form>
+		</section>
+		<script type="text/javascript" src="js/default.js"></script>	
+	</body>
 </html>
   
