--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
           <img src="img/01.jpg" id="bigimg">
         </div>
         <ol>
-          <li><img src="img/th_01.jpg" class="thumb" data-image="01"></li>
-          <li><img src="img/th_02.jpg" class="thumb" data-image="02"></li>
-          <li><img src="img/th_03.jpg" class="thumb" data-image="03"></li>
+          <li><img src="img/01_thumb.jpg" class="thumb" data-image="01"></li>
+          <li><img src="img/02_thumb.jpg" class="thumb" data-image="02"></li>
+          <li><img src="img/03_thumb.jpg" class="thumb" data-image="03"></li>
         </ol>
       </div>
     </section>
